@@ -8,7 +8,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: graphops.tcl,v 1.6 2008/11/14 04:13:16 andreas_kupries Exp $
+# RCS: @(#) $Id: graphops.tcl,v 1.7 2008/11/15 05:48:27 andreas_kupries Exp $
 
 # ### ### ### ######### ######### #########
 ## Requisites
@@ -565,6 +565,98 @@ proc ::struct::graph::op::ComponentOf {g start} {
     return [array names visited]
 }
 
+# ### ### ### ######### ######### #########
+##
+
+# This command determines if the specified arc A in the graph G is a
+# bridge, i.e. if its removal will split the connected component its
+# end nodes belong to, into two. The result is a boolean value. Uses
+# the 'ComponentOf' helper command.
+
+proc ::struct::graph::op::isBridge? {g arc} {
+    if {![$g arc exists $arc]} {
+	return -code error "arc \"$arc\" does not exist in graph \"$g\""
+    }
+
+    # Note: We could avoid the need for a copy of the graph if we were
+    # willing to modify G (*). As we are not willing using a copy is
+    # the easiest way to allow us a trivial modification. For the
+    # future consider the creation of a graph class which represents
+    # virtual graphs over a source, generated by deleting nodes and/or
+    # arcs. without actually modifying the source.
+    #
+    # (Ad *): Create a new unnamed helper node X. Move the arc
+    #         destination to X. Recompute the component and ignore
+    #         X. Then move the arc target back to its original node
+    #         and remove X again.
+
+    set src        [$g arc source $arc]
+    set compBefore [ComponentOf $g $src]
+    if {[llength $compBefore] == 1} {
+	# Special case, the arc is a loop on an otherwise unconnected
+	# node. The component will not split, this is not a bridge.
+	return 0
+    }
+
+    set copy       [struct::graph C = $g]
+    $copy arc delete $arc
+    set compAfter  [ComponentOf $copy $src]
+    $copy destroy
+
+    return [expr {[llength $compBefore] != [llength $compAfter]}]
+}
+
+# This command determines if the specified node N in the graph G is a
+# cut vertex, i.e. if its removal will split the connected component
+# it belongs to into two. The result is a boolean value. Uses the
+# 'ComponentOf' helper command.
+
+proc ::struct::graph::op::isCutVertex? {g n} {
+    if {![$g node exists $n]} {
+	return -code error "node \"$n\" does not exist in graph \"$g\""
+    }
+
+    # Note: We could avoid the need for a copy of the graph if we were
+    # willing to modify G (*). As we are not willing using a copy is
+    # the easiest way to allow us a trivial modification. For the
+    # future consider the creation of a graph class which represents
+    # virtual graphs over a source, generated by deleting nodes and/or
+    # arcs. without actually modifying the source.
+    #
+    # (Ad *): Create two new unnamed helper nodes X and Y. Move the
+    #         icoming and outgoing arcs to these helpers. Recompute
+    #         the component and ignore the helpers. Then move the arcs
+    #         back to their original nodes and remove the helpers
+    #         again.
+
+    set compBefore [ComponentOf $g $n]
+
+    if {[llength $compBefore] == 1} {
+	# Special case. The node is unconnected. Its removal will
+	# cause no changes. Therefore not a cutvertex.
+	return 0
+    }
+
+    # We remove the node from the original component, so that we can
+    # select a new start node without fear of hitting on the
+    # cut-vertex candidate. Also makes the comparison later easier
+    # (straight ==).
+    struct::set subtract compBefore $n
+
+    set copy       [struct::graph C = $g]
+    $copy node delete $n
+    set compAfter  [ComponentOf $copy [lindex $compBefore 0]]
+    $copy destroy
+
+    return [expr {[llength $compBefore] != [llength $compAfter]}]
+}
+
+# This command determines if the graph G is connected.
+
+proc ::struct::graph::op::isConnected? {g} {
+    return [expr { [llength [connectedComponents $g]] == 1 }]
+}
+
 #
 ## place holder for the operations to come
 #
@@ -594,4 +686,4 @@ namespace eval ::struct::graph::op {
     #namespace export ...
 }
 
-package provide struct::graph::op 0.5
+package provide struct::graph::op 0.6
